tests/machine/x/ocaml/group_by_conditional_sum.error
File "/tmp/TestOCamlCompiler_VMValid_Goldengroup_by_conditional_sum3204114995/001/group_by_conditional_sum.ml", line 41, characters 0-16:
41 | List.rev !__res1)
     ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type float list
       Type int is not compatible with type float 
